# rust-dependency-injection-demo

./: Cargo.toml  README.md  crate-analyser.sh  crates-analyser.sh
src/: async_trait_injection.rs  boxed_trait_struct_injection.rs  generic_trait_struct_injection.rs  main.rs  no_injection.rs  shared.rs
